--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <div class="top">
-        <img src="../image/logo2.png">
+        <img src="image/logo2.png">
     </div>
 
     <div class="wrapper">
