--- a/index.html
+++ b/index.html
@@ -1,236 +1,249 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Lead In Page</title>
-    <link href="css/index.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Limelight|Poiret+One|Alegreya+Sans+SC|Patrick+Hand+SC|Bubbler+One|Croissant+One|Work+Sans:30|Lobster" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-</head>
+    <link href="css/index.css" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Limelight|Poiret+One|Alegreya+Sans+SC|Patrick+Hand+SC|Bubbler+One|Croissant+One|Work+Sans:30|Lobster"
+      rel="stylesheet"
+    />
+    <link
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      rel="stylesheet"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"
+    />
+  </head>
 
-<body>
+  <body>
+    <div class="toCenter">
+      <div class="top">
+        <img src="image/logo2.png" />
+      </div>
+      <div class="wrapper">
+        <ul class="panels" style="margin-top: -1em">
+          <!-- <li>
+          <div class="front white"></div>
+          <div class="back pink"></div>
+        </li> -->
+          <li>
+            <div class="front pink rwdDel"></div>
+            <div class="back white rwdDel"></div>
+          </li>
+          <li>
+            <div class="front white"></div>
+            <div class="back pink"></div>
+          </li>
+          <li>
+            <div class="front pink"></div>
+            <div class="back white"></div>
+          </li>
+          <li>
+            <div class="front white"></div>
+            <div class="back pink"></div>
+          </li>
+          <li>
+            <div class="front pink"></div>
+            <div class="back white"></div>
+          </li>
+          <li>
+            <div class="front white"></div>
+            <div class="back pink"></div>
+          </li>
+          <li>
+            <div class="front pink rwdDel"></div>
+            <div class="back white rwdDel"></div>
+          </li>
+          <!-- <li>
+          <div class="front white"></div>
+          <div class="back pink"></div>
+        </li> -->
+        </ul>
 
-    <div class="top">
-        <img src="image/logo2.png">
+        <ul class="panels" style="margin-top: -1em">
+          <!-- <li>
+          <div class="front pink"></div>
+          <div class="back white"></div>
+        </li> -->
+          <li>
+            <div class="front white rwdDel"></div>
+            <div class="back pink rwdDel"></div>
+          </li>
+          <li>
+            <div
+              class="front pink"
+              style="padding: 0px; width: 11vh; height: 11vh;"
+            >
+              <p>Press</p>
+            </div>
+            <a href="press.html">
+              <div
+                class="YellowBack yellow center"
+                style="padding: 0px; width: 11vh; height: 11vh;"
+              >
+                <i id="i" class="fa fa-newspaper-o" aria-hidden="true"></i>
+              </div>
+            </a>
+          </li>
+          <li>
+            <div
+              class="front white"
+              style="padding: 0px; width: 11vh; height: 11vh;"
+            >
+              <p>Menu</p>
+            </div>
+            <a href="menu.html">
+              <div
+                class="YellowBack yellow center"
+                style="padding: 0px; width: 11vh; height: 11vh;"
+                style="padding: 3.3vh;"
+              >
+                <i id="i" class="fa fa-book" aria-hidden="true"></i>
+              </div>
+            </a>
+          </li>
+          <li>
+            <div
+              class="front pink"
+              style="padding: 0px; width: 11vh; height: 11vh;"
+            >
+              <p>Home</p>
+            </div>
+            <a href="home.html">
+              <div
+                class="YellowBack yellow center"
+                style="padding: 0px; width: 11vh; height: 11vh;"
+                style="padding: 3.3vh;"
+              >
+                <i id="i" class="fa fa-home" aria-hidden="true"></i>
+              </div>
+            </a>
+          </li>
+          <li>
+            <div
+              class="front white"
+              style="padding: 0px; width: 11vh; height: 11vh;"
+            >
+              <p>Contact</p>
+            </div>
+            <a href="contact.html">
+              <div
+                class="YellowBack yellow center"
+                style="padding: 0px; width: 11vh; height: 11vh;"
+                style="padding: 3.3vh;"
+              >
+                <i id="i" class="fa fa-envelope-o" aria-hidden="true"></i>
+              </div>
+            </a>
+          </li>
+          <li>
+            <div
+              class="front pink"
+              style="padding: 0px; width: 11vh; height: 11vh;"
+            >
+              <p>Founder</p>
+            </div>
+            <a href="about.html">
+              <div
+                class="YellowBack yellow center"
+                style="padding: 0px; width: 11vh; height: 11vh;"
+                style="padding: 3.3vh;"
+              >
+                <i id="i" class="fa fa-id-card-o" aria-hidden="true"></i>
+              </div>
+            </a>
+          </li>
+          <li>
+            <div class="front white rwdDel"></div>
+            <div class="back pink rwdDel"></div>
+          </li>
+          <!-- <li>
+          <div class="front pink"></div>
+          <div class="back white"></div>
+        </li> -->
+        </ul>
+
+        <ul class="panels" style="margin-top: -1em">
+          <!-- <li>
+          <div class="front white"></div>
+          <div class="back pink"></div>
+        </li> -->
+          <li>
+            <div class="front pink rwdDel"></div>
+            <div class="back white rwdDel"></div>
+          </li>
+          <li>
+            <div class="front white"></div>
+            <div class="back pink"></div>
+          </li>
+          <li>
+            <div class="front pink"></div>
+            <div class="back white"></div>
+          </li>
+          <li>
+            <div class="front white"></div>
+            <div class="back pink"></div>
+          </li>
+          <li>
+            <div class="front pink"></div>
+            <div class="back white"></div>
+          </li>
+          <li>
+            <div class="front white"></div>
+            <div class="back pink"></div>
+          </li>
+          <li>
+            <div class="front pink rwdDel"></div>
+            <div class="back white rwdDel"></div>
+          </li>
+          <!-- <li>
+          <div class="front white"></div>
+          <div class="back pink"></div>
+        </li> -->
+        </ul>
+
+        <ul class="panels" style="margin-top: -1em">
+          <!-- <li>
+          <div class="front pink"></div>
+          <div class="back white"></div>
+        </li> -->
+          <li>
+            <div class="front white rwdDel"></div>
+            <div class="back pink rwdDel"></div>
+          </li>
+          <li>
+            <div class="front pink"></div>
+            <div class="back white"></div>
+          </li>
+          <li>
+            <div class="front white"></div>
+            <div class="back pink"></div>
+          </li>
+          <li>
+            <div class="front pink"></div>
+            <div class="back white"></div>
+          </li>
+          <li>
+            <div class="front white"></div>
+            <div class="back pink"></div>
+          </li>
+          <li>
+            <div class="front pink"></div>
+            <div class="back white"></div>
+          </li>
+          <li>
+            <div class="front white rwdDel"></div>
+            <div class="back pink rwdDel"></div>
+          </li>
+          <!-- <li>
+          <div class="front pink"></div>
+          <div class="back white"></div>
+        </li> -->
+        </ul>
+      </div>
     </div>
-
-    <div class="wrapper">
-        <ul class="panels">
-            <li>
-                <div class="front pink"></div>
-                <div class="back yellow"></div>
-            </li>
-            <li>
-                <div class="front white"></div>
-                <div class="back yellow"></div>
-            </li>
-            <li>
-                <div class="front pink"></div>
-                <div class="back yellow"></div>
-            </li>
-            <li>
-                <div class="front white"></div>
-                <div class="back yellow"></div>
-            </li>
-            <li>
-                <div class="front pink"></div>
-                <div class="back yellow"></div>
-            </li>
-            <li>
-                <div class="front white"></div>
-                <div class="back yellow"></div>
-            </li>
-            <li>
-                <div class="front pink"></div>
-                <div class="back yellow"></div>
-            </li>
-            <li>
-                <div class="front white"></div>
-                <div class="back yellow"></div>
-            </li>
-            <li>
-                <div class="front pink"></div>
-                <div class="back yellow"></div>
-            </li>
-        </ul>
-
-        <ul class="panels" style="margin-top:-16px">
-            <li>
-                <div class="front white"></div>
-                <div class="back pink"></div>
-            </li>
-            <li>
-                <div class="front pink"></div>
-                <div class="back white"></div>
-            </li>
-            <li>
-                <div class="front white"></div>
-                <div class="back pink"></div>
-            </li>
-            <li>
-                <div class="front pink"></div>
-                <div class="back white"></div>
-            </li>
-            <li>
-                <div class="front white"></div>
-                <div class="back pink"></div>
-            </li>
-            <li>
-                <div class="front pink"></div>
-                <div class="back white"></div>
-            </li>
-            <li>
-                <div class="front white"></div>
-                <div class="back pink"></div>
-            </li>
-            <li>
-                <div class="front pink"></div>
-                <div class="back white"></div>
-            </li>
-            <li>
-                <div class="front white"></div>
-                <div class="back pink"></div>
-            </li>
-        </ul>
-
-        <ul class="panels" style="margin-top:-16px">
-            <li>
-                <div class="front pink"></div>
-                <div class="back white"></div>
-            </li>
-            <li>
-                <div class="front white"></div>
-                <div class="back pink"></div>
-            </li>
-            <li>
-                <div class="front pink" style="padding:0px;width:100px;height:100px;">
-                    <p>Press</p>
-                </div>
-                <a href="press.html">
-                    <div class="YellowBack yellow" style="padding:30px 26px 30px 28px;"><i id="i" class="fa fa-newspaper-o" aria-hidden="true"></i></div>
-                </a>
-            </li>
-            <li>
-                <div class="front white" style="padding:0px;width:100px;height:100px;">
-                    <p>Menu</p>
-                </div>
-                <a href="menu.html">
-                    <div class="YellowBack yellow" style="padding:30px 32px 30px 31px"><i id="i" class="fa fa-book" aria-hidden="true"></i></div>
-                </a>
-            </li>
-            <li>
-                <div class="front pink" style="padding:0px;width:100px;height:100px;">
-                    <p>Home</p>
-                </div>
-                <a href="home.html">
-                    <div class="YellowBack yellow" style="padding:33px 33px 30px 30px;"><i id="i" class="fa fa-home" aria-hidden="true"></i></div>
-                </a>
-            </li>
-            <li>
-                <div class="front white" style="padding:0px;width:100px;height:100px;">
-                    <p>Contact</p>
-                </div>
-                <a href="contact.html">
-                    <div class="YellowBack yellow" style="padding:30px 30px 30px 30px"><i id="i" class="fa fa-envelope-o" aria-hidden="true"></i></div>
-                </a>
-            </li>
-            <li>
-                <div class="front pink" style="padding:0px;width:100px;height:100px;">
-                    <p>Founder</p>
-                </div>
-                <a href="about.html">
-                    <div class="YellowBack yellow" style="padding:30px 27px 30px 27px"><i id="i" class="fa fa-id-card-o" aria-hidden="true"></i></div>
-                </a>
-            </li>
-            <li>
-                <div class="front white"></div>
-                <div class="back pink"></div>
-            </li>
-            <li>
-                <div class="front pink"></div>
-                <div class="back white"></div>
-            </li>
-        </ul>
-
-        <ul class="panels" style="margin-top:-20px">
-            <li>
-                <div class="front white"></div>
-                <div class="back pink"></div>
-            </li>
-            <li>
-                <div class="front pink"></div>
-                <div class="back white"></div>
-            </li>
-            <li>
-                <div class="front white"></div>
-                <div class="back pink"></div>
-            </li>
-            <li>
-                <div class="front pink"></div>
-                <div class="back white"></div>
-            </li>
-            <li>
-                <div class="front white"></div>
-                <div class="back pink"></div>
-            </li>
-            <li>
-                <div class="front pink"></div>
-                <div class="back white"></div>
-            </li>
-            <li>
-                <div class="front white"></div>
-                <div class="back pink"></div>
-            </li>
-            <li>
-                <div class="front pink"></div>
-                <div class="back white"></div>
-            </li>
-            <li>
-                <div class="front white"></div>
-                <div class="back pink"></div>
-            </li>
-        </ul>
-
-        <ul class="panels" style="margin-top:-16px">
-            <li>
-                <div class="front pink"></div>
-                <div class="back white"></div>
-            </li>
-            <li>
-                <div class="front white"></div>
-                <div class="back pink"></div>
-            </li>
-            <li>
-                <div class="front pink"></div>
-                <div class="back white"></div>
-            </li>
-            <li>
-                <div class="front white"></div>
-                <div class="back pink"></div>
-            </li>
-            <li>
-                <div class="front pink"></div>
-                <div class="back white"></div>
-            </li>
-            <li>
-                <div class="front white"></div>
-                <div class="back pink"></div>
-            </li>
-            <li>
-                <div class="front pink"></div>
-                <div class="back white"></div>
-            </li>
-            <li>
-                <div class="front white"></div>
-                <div class="back pink"></div>
-            </li>
-            <li>
-                <div class="front pink"></div>
-                <div class="back white"></div>
-            </li>
-        </ul>
-    </div>
-</body>
-
+  </body>
 </html>
