--- a/menu.html
+++ b/menu.html
@@ -1,57 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"
+    />
     <title>Menu</title>
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.min.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Monoton|Inconsolata|Nunito|Limelight|Poiret+One|Alegreya+Sans+SC|Croissant+One|Work+Sans:300" rel="stylesheet">
-    <link href="css/menu.css" rel="stylesheet">
-</head>
+    <link
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      rel="stylesheet"
+    />
+    <script
+      type="text/javascript"
+      src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.min.js"
+    ></script>
+    <link
+      href="https://fonts.googleapis.com/css?family=Monoton|Inconsolata|Nunito|Limelight|Poiret+One|Alegreya+Sans+SC|Croissant+One|Work+Sans:300"
+      rel="stylesheet"
+    />
+    <link href="css/menu.css" rel="stylesheet" />
+  </head>
 
-<body>
+  <body>
     <div class="top">
-        <nav>
-            <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="menu.html">Menu</a></li>
-                <li><a href="home.html#about">About</a></li>
-                <li><a href="home.html#activity">Activity</a></li>
-                <li><a href="press.html">Press</a></li>
-                <li><a href="about.html">Founder</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <ul>
+          <li><a href="home.html">Home</a></li>
+          <li><a href="menu.html">Menu</a></li>
+          <li><a href="home.html#about">About</a></li>
+          <li><a href="home.html#activity">Activity</a></li>
+          <li><a href="press.html">Press</a></li>
+          <li><a href="about.html">Founder</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
     </div>
     <div id="header">menu</div>
     <div class="dishes-1">
-        <ul>
-            <li><img src="image/menu-1.jpg">
-                <p>A good bak chor mee demands that the tang and spiciness, combined with soy sauce, be exacting and perfectly balanced with soft slices of pork, meat balls, liver, dumplings, and crispy sun dried smokey chips of "pi her", or dried flat fish bones.</p>
-            </li>
-            <li><img src="image/menu-2.jpg">
-                <p>Mattar Road Seafood puts wine, white pepper powder and corns, shots of sesame oil, oyster sauce and fish sauce together with some spring onions, to rock white pepper crabs into one of the best versions you'll ever get of this Singapore-born culinary wonder.</p>
-            </li>
-            <li><img src="image/menu-3.jpg">
-                <p>It sits over a soft fluffy lightly coconut-ty rice, that can be paired with sayur lodeh -- spicy coconut milk stewed vegetables, crispy anchovies, grilled otah (spicy fish paste) and a regular plain Jane fried egg to go with the sweetish and spicy sambal chili.</p>
-            </li>
-            <li><img src="image/menu-4.jpg">
-                <p>Chef Ben Teo was raised in a Nyonya or Peranakan (descendants of long-ago Chinese immigrants)environment, and grew up eating soulful Peranakan fare cooked by his late grandmother, peppered with love.He's also trained in the finer art of Cantonese and western cuisine, and now, he's back in a Nyonya kitchen.</p>
-            </li>
-        </ul>
-
-
+      <div class="dishesZone">
+        <div class="dishDiv">
+          <img src="image/menu-1.jpg" />
+          <p>
+            A good bak chor mee demands that the tang and spiciness, combined
+            with soy sauce, be exacting and perfectly balanced with soft slices
+            of pork, meat balls, liver, dumplings, and crispy sun dried smokey
+            chips of "pi her", or dried flat fish bones.
+          </p>
+          <p>
+            Mattar Road Seafood puts wine, white pepper powder and corns, shots
+            of sesame oil, oyster sauce and fish sauce together with some spring
+            onions, to rock white pepper crabs into one of the best versions
+            you'll ever get of this Singapore-born culinary wonder.
+          </p>
+        </div>
+        <div class="dishDiv">
+          <p>
+            It sits over a soft fluffy lightly coconut-ty rice, that can be
+            paired with sayur lodeh -- spicy coconut milk stewed vegetables,
+            crispy anchovies, grilled otah (spicy fish paste) and a regular
+            plain Jane fried egg to go with the sweetish and spicy sambal chili.
+          </p>
+        </div>
+        <div class="dishDiv">
+          <p>
+            Chef Ben Teo was raised in a Nyonya or Peranakan (descendants of
+            long-ago Chinese immigrants)environment, and grew up eating soulful
+            Peranakan fare cooked by his late grandmother, peppered with
+            love.He's also trained in the finer art of Cantonese and western
+            cuisine, and now, he's back in a Nyonya kitchen.
+          </p>
+        </div>
+      </div>
     </div>
     <div id="dishes-2">
-        <div id="dishes2-base">
-            <div id="dishes2-top">
-                <div class="pp">
-                    <p class="p1">Macaroon<br></p>
-                    <p class="p2"> is a type of small circular cake, typically made from ground almonds (the original main ingredient), coconut, and/or other nuts or even potato, with sugar, egg white, and sometimes flavorings (e.g. honey, vanilla, spices), food coloring, glace cherries, jam and/or a chocolate coating.Some recipes call for sweetened condensed milk. Macaroons are often baked on edible rice paper placed on a baking tray.</p>
-                </div>
-            </div>
+      <div id="dishes2-base">
+        <div id="dishes2-top">
+          <div class="pp">
+            <p class="p1">Macaroon<br /></p>
+            <p class="p2">
+              is a type of small circular cake, typically made from ground
+              almonds (the original main ingredient), coconut, and/or other nuts
+              or even potato, with sugar, egg white, and sometimes flavorings
+              (e.g. honey, vanilla, spices), food coloring, glace cherries, jam
+              and/or a chocolate coating.Some recipes call for sweetened
+              condensed milk. Macaroons are often baked on edible rice paper
+              placed on a baking tray.
+            </p>
+          </div>
         </div>
-
+      </div>
     </div>
-</body>
+  </body>
 </html>
