--- a/activity.html
+++ b/activity.html
@@ -1,98 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>OULPIE|Wedding for Weddy</title>
-    <link rel="stylesheet" href="css/activity.css">
-    <link href="https://fonts.googleapis.com/css?family=Limelight|Poiret+One|Alegreya+Sans+SC|Croissant+One|Work+Sans:300" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/activity.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Limelight|Poiret+One|Alegreya+Sans+SC|Croissant+One|Work+Sans:300"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      rel="stylesheet"
+    />
     <style>
-        body {
-            margin: auto 0;
-            text-align: center;
-        }
-        
-        .top_pic {
-            background-image: url(image/activity_top_01.jpg)
-        }
-        
-        .last_pic {
-            height: 450px;
-            background-image: url(image/activity_top_02.jpg);
-            margin-top: -120px;
-        }
+      .top_pic {
+        background-image: url(image/activity_top_01.jpg);
+      }
+
+      .last_pic {
+        background-image: url(image/activity_top_02.jpg);
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="top">
-        <nav>
-            <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="menu.html">Menu</a></li>
-                <li><a href="home.html#about">About</a></li>
-                <li><a href="home.html#activity">Activity</a></li>
-                <li><a href="press.html">Press</a></li>
-                <li><a href="about.html">Founder</a></li>
-                <li><a href="contact.html">Contact</a></li>
-
-            </ul>
-        </nav>
+      <nav>
+        <ul>
+          <li><a href="home.html">Home</a></li>
+          <li><a href="menu.html">Menu</a></li>
+          <li><a href="home.html#about">About</a></li>
+          <li><a href="home.html#activity">Activity</a></li>
+          <li><a href="press.html">Press</a></li>
+          <li><a href="about.html">Founder</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
     </div>
-    <div class="top_pic">
-    </div>
+    <div class="top_pic"></div>
     <div class="top_word">
-        <p id="p1">Wedding for Weddy</p>
+      <p id="p1">Wedding for Weddy</p>
     </div>
     <div class="second_word">
-        <p class="littlefont">DATE:</p>
-        <p class="bigfont">7.2</p>
-        <p class="littlefont">Wedding Venue:</p>
-        <p class="bigfont">Church Estate Vineyards</p>
-        <p class="littlefont">Style:</p>
-        <p class="bigfont">Plated Dinner</p>
+      <p class="littlefont">DATE:</p>
+      <p class="bigfont">7.2</p>
+      <p class="littlefont">Wedding Venue:</p>
+      <p class="bigfont">Church Estate Vineyards</p>
+      <p class="littlefont">Style:</p>
+      <p class="bigfont">Plated Dinner</p>
 
-        <div class="picword">
+      <div class="picword">
+        <img src="image/activity_4.jpg" class="imgsss" />
+        <p class="midfont">-Menu-</p>
+      </div>
 
-            <img src="image/activity_4.jpg" class="imgsss">
-            <p class="midfont">-Menu-</p>
-        </div>
-
-        <div class="picword">
-
-            <img src="image/activity_1.jpg" class="imgsss">
-            <p class="midfont">-Food-</p>
-        </div>
-        <div class="picword">
-
-            <img src="image/activity_2.jpg" class="imgsss">
-            <p class="midfont">-Couple-</p>
-        </div>
-        <div class="picword">
-
-            <img src="image/activity_3.jpg" class="imgsss">
-            <p class="midfont">-Dessert-</p>
-            <p></p>
-
-        </div>
-        <p class="font">-Berry Girl-</p>
-        <p class="font">The food was SO amazing!!! Everyone raved about it and multiple people came up and told me it was the best wedding food they’ve ever had. Thank you so much again for helping make the night perfect and I can’t wait to work with you ladies again! I’m trying to think of events I can throw just so I can have you girls cater again!!</p>
-
+      <div class="picword">
+        <img src="image/activity_1.jpg" class="imgsss" />
+        <p class="midfont">-Food-</p>
+      </div>
+      <div class="picword">
+        <img src="image/activity_2.jpg" class="imgsss" />
+        <p class="midfont">-Couple-</p>
+      </div>
+      <div class="picword">
+        <img src="image/activity_3.jpg" class="imgsss" />
+        <p class="midfont">-Dessert-</p>
+        <p></p>
+      </div>
+      <p class="font">-Berry Girl-</p>
+      <p class="font">
+        The food was SO amazing!!! Everyone raved about it and multiple people
+        came up and told me it was the best wedding food they’ve ever had. Thank
+        you so much again for helping make the night perfect and I can’t wait to
+        work with you ladies again! I’m trying to think of events I can throw
+        just so I can have you girls cater again!!
+      </p>
     </div>
-    <div class="last_pic">
-    </div>
+    <div class="last_pic"></div>
 
     <div class="mid_2font">
-        <a href="home.html">
-            <p>Best Wishes...<br>by OULPIE.</p>
-        </a>
+      <a href="home.html">
+        <p>Best Wishes...<br />by OULPIE.</p>
+      </a>
     </div>
-
-</body>
-
+  </body>
 </html>
